# photoface

./: .gitignore  README.md  pyproject.toml
src/photoface/: __init__.py  main.py
src/photoface/core/: config.py  database.py  export_manager.py  face_analyzer.py  face_clusterer.py  model_manager.py  scan_manager.py
src/photoface/ui/: albums_tab.py  faces_tab.py  folder_photos_widget.py  folders_tab.py  main_window.py  photo_viewer.py  settings_dialog.py
src/photoface/utils/: __init__.py  face_thumbnail_cache.py  helpers.py  model_updater.py
