[project]
name = "photoface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "insightface",
    "numpy>=1.21.0,<2.0.0",
    "opencv-python",
    "pillow>=12.0.0",
    "pyqt6>=6.10.0",
    "scikit-learn>=1.7.2",
    "onnxruntime==1.20.0",

]

[project.scripts]
photofacemanager = "photoface.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
insightface = { path = "D:/tsa/dwn/insightface-0.7.3-cp311-cp311-win_amd64.whl" }
